parslers-benchmark/src/tests/invalid/syntaxErr/function/funcExpr.wacc
# function calls are not first-class expressions

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    return 0 
  end
  int x = f() + f()
end
	
